--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .kotlin
 .gradle
+.fleet
 **/build/
 xcuserdata
 !src/**/build/
@@ -16,5 +17,5 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
-iosApp/DerivedData
-composeApp/release
+iosApp/DerivedData/*
+composeApp/release/*
